# qwik-ask

./: .release-it.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
scripts/: sync-tauri-version.js
src/: App.vue  Settings.vue  main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migrations.rs
src-tauri/src/commands/: settings.rs  window.rs
src-tauri/src/settings/: manager.rs  mod.rs  types.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/window/: mod.rs
src/components/: ChatMessage.vue  CheckIcon.vue  CopyIcon.vue  HistoryIcon.vue  HistoryItem.vue  HistoryPanel.vue  KeyboardIcon.vue  ShortcutRecorder.vue
src/components/icons/: InfoIcon.vue  SettingsIcon.vue
src/composables/: useChat.ts  useHistory.ts  useKeyboardShortcuts.ts  useSettings.ts  useTheme.ts  useUpdater.ts  useWindowResize.ts
src/features/chat/: App.vue  ChatMessage.vue  HistoryItem.vue  HistoryPanel.vue
src/features/settings/: Settings.vue
src/services/: gemini.ts  historyDb.ts
src/services/llm/: anthropic.ts  gemini.ts  index.ts  openai.ts  types.ts
src/styles/: chat.css  settings.css
src/tests/: setup.ts
src/types/: chat.ts  history.ts  index.ts  settings.ts
src/views/: ChatView.vue  SettingsView.vue
(+16 files in other folders)
