[package]
name = "qwik-ask"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quick_assist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
thiserror = "2.0.18"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

[profile.release]
panic = "abort"      # Remove panic unwinding code
codegen-units = 1    # Better optimization (slower compile)
lto = true           # Link-Time Optimization - smaller binary
opt-level = "s"      # Optimize for size ("z" for even smaller)
strip = true         # Strip symbols from binary
